--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <header class="header">
     <div class="container">
       <div class="header__inner">
+        
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item">
@@ -167,7 +168,7 @@
             </a>
           </li>
           <li class="application__item">
-            <a class="application__btn" href="#" id="moldindcombank">
+            <a class="application__btn" href="#" id="moldincombank">
               <img class="application__img" src="images/banks/moldindcon.svg" style="min-width: 150px; min-height: 20px;" width="145px" height="24px"
                 alt="moldindconbank">
             </a>
@@ -213,9 +214,50 @@
           </li>
         </ul>
         <div class="application__box">
-          <p class="application__text">
+
+          <p class="application__text" id="link_maibbank">
             Descarcă aplicația în
-            <a href="#">App Store</a> și <a href="#">Google Play</a>
+            <a href="https://apps.apple.com/md/app/maibank/id1312754339">App Store</a> și <a href="https://play.google.com/store/search?q=maib&c=apps">Google Play</a>
+          </p>
+          <p class="application__text" id="link_comertbank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/md/app/cb-personal/id6478920649">App Store</a> și <a href="https://play.google.com/store/apps/details?id=com.dvh.android.shell.mercury.prod&hl=ro">Google Play</a>
+          </p>
+          <p class="application__text" id="link_victoriabank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/md/app/vb24-mobile/id1321345640?platform=iphone">App Store</a> și <a href="https://play.google.com/store/apps/details?id=com.victoriabank.mobilebank&hl=ro">Google Play</a>
+          </p>
+          <p class="application__text" id="link_moldincombank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/ro/app/micb-mobile-banking/id964768029?l=ro">App Store</a> și <a href="https://play.google.com/store/apps/details?id=md.micb.mwb.prod&hl=en">Google Play</a>
+          </p>
+          <p class="application__text" id="link_evrocreditbank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/md/app/ecbank/id6451968530">App Store</a> și <a href="https://play.google.com/store/apps/details?id=md.ecb.ecbank">Google Play</a>
+          </p>
+          <p class="application__text" id="link_otpbank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/ro/app/otp-mobile-banking-moldova/id1540743039">App Store</a> și <a href="https://play.google.com/store/apps/details?id=md.mobiasbanca.otpdirekt&hl=ro">Google Play</a>
+          </p>
+          <p class="application__text" id="link_bcrbank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/md/app/personal-mobile-24banking/id1468112800?platform=iphone">App Store</a> și <a href="https://play.google.com/store/apps/details?id=com.bankflex.android.bcr.retail.x1_0">Google Play</a>
+          </p>
+          <p class="application__text" id="link_eximbank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/md/app/eximbank/id1568499214?platform=iphone">App Store</a> și <a href="https://play.google.com/store/apps/details?id=bankflex.android.per.exim.prod.x2_0">Google Play</a>
+          </p>
+          <p class="application__text" id="link_procreditbank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/md/app/procredit-moldova/id1401867077">App Store</a> și <a href="https://play.google.com/store/apps/details?id=com.quipugmbh.mobilebanking.moldova">Google Play</a>
+          </p>
+          <p class="application__text" id="link_energbank">
+            Descarcă aplicația în
+            <a href="https://apps.apple.com/md/app/energbank-mobile/id6477718509">App Store</a> și <a href="https://play.google.com/store/apps/details?id=com.energbank.android.olbankpf.production">Google Play</a>
+          </p>
+          <p class="application__text" id="link_fincombank">
+            Descarcă aplicația în
+            <a href="#https://apps.apple.com/md/app/fincompay-mobile-banking/id1387938038?platform=iphone">App Store</a> și <a href="https://play.google.com/store/search?q=fincombank&c=apps">Google Play</a>
           </p>
 
           <ul class="application__items">
@@ -223,47 +265,38 @@
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-1.png" alt="">
+                    <img src="images/slides/maib/slide-1.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-2.png" alt="">
+                    <img src="images/slides/maib/slide-2.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-3.png" alt="">
+                    <img src="images/slides/maib/slide-3.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-4.png" alt="">
+                    <img src="images/slides/maib/slide-4.png" alt="">
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
             </li>
-            <li class="application__content" id="swipper-fincombank">
+            <li class="application__content" id="swipper-moldincombank">
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-1.png" alt="">
+                    <img src="images/slides/moldincom/slide-1.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-2.png" alt="">
+                    <img src="images/slides/moldincom/slide-2.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-3.png" alt="">
+                    <img src="images/slides/moldincom/slide-3.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-4.png" alt="">
+                    <img src="images/slides/moldincom/slide-4.png" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/slides/slide-4.png" alt="">
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="images/slides/slide-4.png" alt="">
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="images/slides/slide-4.png" alt="">
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="images/slides/slide-4.png" alt="">
+                    <img src="images/slides/moldincom/slide-5.png" alt="">
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -436,13 +469,7 @@
               </div>
               <div class="questions__box">
                 <p class="questions__text" style="min-height: 0;">
-                  Selectează din aplicația băncii tale opțiunea Transferuri. Introdu datele destinatarului. Poți
-                  transfera bani inclusiv
-                  de pe cardul tău pe un alt card emis pe numele tău. Introdu suma exactă. Unele aplicații permit și
-                  selectarea valutei.
-                  Autorizează și confirmă transferul. Unele aplicații o fac prin SMS sau prin biometrie (scanare facială
-                  sau scanare
-                  amprentă). Gata! Transferul a fost efectuat în câteva secunde.
+                  Poți transfera bani prietenilor și familiei direct din aplicația băncii tale. Acest serviciu este numit P2P și funcționează eficient și rapid, indiferent dacă vorbim despre cardurile emise de aceeași bancă sau despre transferurile dintre carduri emise de bănci străine. Important este să verifici comisionul, care este stabilit individual, de fiecare bancă în parte.
                 </p>
               </div>
             </li>
@@ -457,13 +484,8 @@
               </div>
               <div class="questions__box">
                 <p class="questions__text" style="min-height: 0;">
-                  Selectează din aplicația băncii tale opțiunea Transferuri. Introdu datele destinatarului. Poți
-                  transfera bani inclusiv
-                  de pe cardul tău pe un alt card emis pe numele tău. Introdu suma exactă. Unele aplicații permit și
-                  selectarea valutei.
-                  Autorizează și confirmă transferul. Unele aplicații o fac prin SMS sau prin biometrie (scanare facială
-                  sau scanare
-                  amprentă). Gata! Transferul a fost efectuat în câteva secunde.
+                  Dacă ai uitat PIN-ul, nu te panica. Pierderea sau uitarea PIN-ului nu este o situație fără soluție. Contactează banca la serviciul de asistență și raportează problema. Furnizează informațiile necesare și fii pregătit să oferi informații despre cardul tău și să-ți confirmi identitatea.Vizitează o sucursală a băncii pentru a depune o cerere de reemitere a unui nou card, dacă este necesar.
+Acest proces se poate rezolva rapid, chiar și din aplicația băncii, fără a fi nevoie să mergi la sucursală sau să telefonezi, în funcție de serviciile oferite de banca ta.
                 </p>
               </div>
             </li>
@@ -478,13 +500,8 @@
               </div>
               <div class="questions__box">
                 <p class="questions__text" style="min-height: 0;">
-                  Selectează din aplicația băncii tale opțiunea Transferuri. Introdu datele destinatarului. Poți
-                  transfera bani inclusiv
-                  de pe cardul tău pe un alt card emis pe numele tău. Introdu suma exactă. Unele aplicații permit și
-                  selectarea valutei.
-                  Autorizează și confirmă transferul. Unele aplicații o fac prin SMS sau prin biometrie (scanare facială
-                  sau scanare
-                  amprentă). Gata! Transferul a fost efectuat în câteva secunde.
+                  E natural să îți faci griji în cazul în care ți-ai pierdut cardul, dar poți fi sigur că se rezolvă rapid. Cardul fizic, indiferent de ce se întâmplă cu el, poate fi oricând înlocuit, în timp ce banii rămân în absolută siguranță pe contul tău. Nu ai nevoie să vizitezi sucursala sau să telefonezi banca. Poți bloca cardul furat direct din aplicația băncii. Important e să reacționezi rapid!
+                  <br> În cazul în care nu găsești această funcționalitate în aplicație, informează banca despre pierderea sau furtul cardului printr-un apel la serviciul de asistență. Furnizează informații despre card și identitatea ta. Banca va bloca acel card și te va informa despre cum poți obține o înlocuire.
                 </p>
               </div>
             </li>
@@ -499,13 +516,7 @@
               </div>
               <div class="questions__box">
                 <p class="questions__text" style="min-height: 0;">
-                  Selectează din aplicația băncii tale opțiunea Transferuri. Introdu datele destinatarului. Poți
-                  transfera bani inclusiv
-                  de pe cardul tău pe un alt card emis pe numele tău. Introdu suma exactă. Unele aplicații permit și
-                  selectarea valutei.
-                  Autorizează și confirmă transferul. Unele aplicații o fac prin SMS sau prin biometrie (scanare facială
-                  sau scanare
-                  amprentă). Gata! Transferul a fost efectuat în câteva secunde.
+                  Blochează imediat token-ul din contul tău Google/ Apple, mergi la sucursala băncii tale și blochează aplicația, apoi blochează SIM-ul pierdut la operatorul de telefonie mobilă. Pe noul telefon vei avea nevoie să înrolezi din nou cardul în wallet.
                 </p>
               </div>
             </li>
